@@ -162,14 +162,21 @@ function theme_advanced_forum_shadow_topic($title, $nid, $new_forum) {
     ' (' . l(t('View topic'), "node/$nid") . ')';
 }
 
-//@TODO: Make this a theme function.
-function advanced_forum_subforum_list($subforum_list) {
+/**
+ * Theme function to a formatted list of subforums.
+ *
+ * @param $subforum_list
+ *   Array of subforums.
+ * @return
+ *   Formatted list of subforums.
+ */
+function theme_advanced_forum_subforum_list($subforum_list) {
   $subforums = array();
   foreach($subforum_list AS $tid => $subforum) {
     $subforums[] = l($subforum->name, "forum/$tid");
   }
   
-  return "Subforums: " . implode(', ', $subforums);
+  return t("Subforums:") . implode(', ', $subforums);
 }
 
 // TEMPLATE PREPROCESS ******************************************************/
